--- a/projects/admin/src/app/components/driver-form-container/driver-form-container.component.html
+++ b/projects/admin/src/app/components/driver-form-container/driver-form-container.component.html
@@ -23,6 +23,10 @@
       <button [class.active]="activeTab === 'updates'" (click)="navigateTo('updates')">
         <i class="bi bi-truck"></i> Driver Updates
       </button>
+      <button [class.active]="activeTab === 'van-issues'" (click)="navigateTo('van-issues')" class="tab-with-notification">
+        <i class="bi bi-exclamation-triangle"></i> Van Issues
+        <span *ngIf="unverifiedVanIssues > 0" class="notification-badge">{{ unverifiedVanIssues }}</span>
+      </button>
     </div>
   </div>
 
